logs/ema-workbench.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ema_workbench'...
Listing './lib/python3.5/site-packages/ema_workbench/analysis'...
Listing './lib/python3.5/site-packages/ema_workbench/analysis/cluster_util'...
Listing './lib/python3.5/site-packages/ema_workbench/connectors'...
Listing './lib/python3.5/site-packages/ema_workbench/connectors/java'...
Listing './lib/python3.5/site-packages/ema_workbench/connectors/java/netlogoLink_v52'...
Listing './lib/python3.5/site-packages/ema_workbench/connectors/java/netlogoLink_v6'...
Listing './lib/python3.5/site-packages/ema_workbench/em_framework'...
Listing './lib/python3.5/site-packages/ema_workbench/examples'...
Compiling './lib/python3.5/site-packages/ema_workbench/examples/cart_flu_example.py'...
***   File "./lib/python3.5/site-packages/ema_workbench/examples/cart_flu_example.py", line 46
    print cart_alg.stats_to_dataframe()
                 ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ema_workbench/examples/data'...
Compiling './lib/python3.5/site-packages/ema_workbench/examples/flu_vensim_example_advanced.py'...
***   File "./lib/python3.5/site-packages/ema_workbench/examples/flu_vensim_example_advanced.py", line 59
    evaluator==evaluator)
    ^
SyntaxError: positional argument follows keyword argument

Listing './lib/python3.5/site-packages/ema_workbench/examples/models'...
Listing './lib/python3.5/site-packages/ema_workbench/examples/models/burnout'...
Listing './lib/python3.5/site-packages/ema_workbench/examples/models/excelModel'...
Listing './lib/python3.5/site-packages/ema_workbench/examples/models/flu'...
Listing './lib/python3.5/site-packages/ema_workbench/examples/models/predatorPreyNetlogo'...
Listing './lib/python3.5/site-packages/ema_workbench/examples/models/pysd'...
Listing './lib/python3.5/site-packages/ema_workbench/examples/models/scarcity'...
Listing './lib/python3.5/site-packages/ema_workbench/examples/models/vensim example'...
Listing './lib/python3.5/site-packages/ema_workbench/util'...
Listing './lib/python3.5/site-packages/ema_workbench-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
